# socmate

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  flake.nix  pytest.ini  requirements-lock.txt  requirements.txt  run_pipeline.py
orchestrator/: __init__.py  _timeouts.py  config.yaml  dashboard.py  mcp_server.py  pyproject.toml  utils.py
orchestrator/architecture/: __init__.py  block_diagram_schema.py  constraints.py  doc_store.py  state.py
orchestrator/langchain/: __init__.py  phoenix_evals.py
orchestrator/langgraph/: __init__.py  architecture_graph.py  backend_graph.py  backend_helpers.py  event_stream.py  integration_helpers.py  observer.py  pipeline_graph.py  pipeline_helpers.py  tapeout_graph.py  tapeout_helpers.py
orchestrator/pdk/: __init__.py  pdk_config.py
orchestrator/pdk_templates/: __init__.py
orchestrator/telemetry/: __init__.py  exporter.py  reader.py
orchestrator/tests/: __init__.py  conftest.py  fft16_fixtures.py  test_architecture.py  test_architecture_graph.py  test_architecture_integration.py  test_backend_e2e.py  test_backend_graph.py  test_backend_helpers.py  test_constraints.py  test_cursor_llm.py  test_derived_constraints.py  test_doc_persistence_integration.py  test_doc_store.py  test_event_stream.py  test_flow_fixes.py  test_integration_lead.py  test_live_architecture.py  test_local_architecture_contract_stress.py  test_mcp_server.py  test_no_arch_state_json.py  test_persist_helpers.py  test_pipeline_efficiency.py  test_pipeline_graph.py  (+7 more)
(+179 files in other folders)
